--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,18 @@
 /*  your css code here. If applicable */
+#paragraph1{
+border: 1px solid;
+background-color: yellow;
+border-color: green;
+}
+
+#paragraph2{
+  border: 1px solid;
+    background-color:red;
+    border-color:black;
+    }
+
+    #paragraph3{
+        border: 1px solid;
+        background-color:green;
+        border-color:yellow;
+        }
