--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,22 @@
 /*  your css code here. If applicable */
-#paragraph1{
-border: 1px solid;
-background-color: yellow;
-border-color: green;
-}
-
-#paragraph2{
-  border: 1px solid;
-    background-color:red;
-    border-color:black;
+#yellow{
+    background-color: yellow;
+    border-width: 1px;
+    border: solid;
+    border-color: green;
     }
 
-    #paragraph3{
-        border: 1px solid;
-        background-color:green;
-        border-color:yellow;
-        }
+    #red{
+    background-color:red;
+    border-width: 1px;
+    border: solid;
+    border-color:black; 
+    }
+
+    #green{
+    background-color:green;
+    border-width: 1px;
+    border: solid;
+    border-color:  yellow;
+        
+}
